@@ -1702,3 +1702,14 @@ ${for %%a in (*.exe) do echo %%a}
 	- Fixed find to make it faster using file buffering potential.
 	
 	- Fixed the set command.
+	
+{{Friday 5th, May}}
+
+	- Added support for concatenation using '+' with the the {COPY} command.
+	
+	- Added better support of variable trucating using numbers when Dos9 is
+	explicitely compiled to deal with utf-8.
+	
+	- Fixed error messages and help messages.
+	
+	- Fixed manual pages.
