@@ -235,7 +235,7 @@ ${IF %ma_var%==test (
 }
 
 	Tant que {ma_var} ne contient pas d'espace, ni de caractère interpreté
-	(comme {&} ou {|}), cet exemple va admirablement bien marcher.
+	(comme {&} ou {\|}), cet exemple va admirablement bien marcher.
 	Malheureusement, si {ma_var} contient bien de tels caractères, l'exemple
 	ne va plus fonctionner correctement. Cet effet est causé par le fait que
 	{ma_var} esy dévellopée avant que la ligne soit exécutée, si bien que les
